# 236project

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDash.cpp  ColonDash.h  CommaAutomaton.cpp  CommaAutomaton.h  Comment.cpp  Comment.h  DatalogProgram.h  Facts.cpp  Facts.h  ID.cpp  ID.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.h  Queries.cpp  Queries.h  QuestionMarkAuto.cpp  QuestionMarkAuto.h  RightParenAutomaton.cpp  RightParenAutomaton.h  Rule.h  Rules.cpp  Rules.h  Scanner.cpp  Scanner.h  Schemes.cpp  (+12 more)
lab1.dSYM/Contents/Resources/DWARF/: lab1
project1-tests/: makefile
